[gd_scene load_steps=13 format=3 uid="uid://brv6qhhjhgrss"]

[ext_resource type="Texture2D" uid="uid://bq2xpg2ds75kd" path="res://Assets/Enemies/water_crab_claw.png" id="1_f21y0"]
[ext_resource type="Script" uid="uid://csqxy5afxdl5d" path="res://Scenes/water_crab.gd" id="1_obglq"]
[ext_resource type="Texture2D" uid="uid://dgckq0ugy65r6" path="res://Assets/Enemies/water_crab_body.png" id="2_obglq"]
[ext_resource type="Shader" uid="uid://dqlgtuowbyn8v" path="res://Shaders/flash.gdshader" id="3_66m6x"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_66m6x"]
size = Vector2(98, 96)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_5tpt0"]
shader = ExtResource("3_66m6x")
shader_parameter/flash_color = Vector4(1, 1, 1, 1)
shader_parameter/flash_modifier = 0.0

[sub_resource type="Curve" id="Curve_5tpt0"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(0.0514019, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="Animation" id="Animation_64ws7"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CPUParticles2D:emitting")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CPUParticles2D:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -2)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("CPUParticles2D2:emitting")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("CPUParticles2D3:emitting")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Lhand:frame")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Rhand:frame")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("Rhand:position")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(85, -25)]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("Rhand:rotation")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.309]
}
tracks/9/type = "value"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("Lhand:position")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-85, -25)]
}
tracks/10/type = "value"
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/path = NodePath("Lhand:rotation")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [-1.309]
}
tracks/11/type = "value"
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/path = NodePath("Sprite2D:position")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_daoeq"]
resource_name = "idle"
length = 1.6
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4, 0.8, 1.2),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -1), Vector2(0, 0), Vector2(0, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Rhand:position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.4, 0.8, 1.2),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(85, 25), Vector2(85, 30), Vector2(85, 25), Vector2(85, 20)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Lhand:position")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.4, 0.8, 1.2),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(-85, 25), Vector2(-85, 30), Vector2(-85, 25), Vector2(-85, 20)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.5, 0.7),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [7, 6]
}

[sub_resource type="Animation" id="Animation_obglq"]
resource_name = "open_hands"
length = 0.6
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Rhand:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [1, 2, 3, 4, 5]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Lhand:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [1, 2, 3, 4, 5]
}

[sub_resource type="Animation" id="Animation_xc0bi"]
resource_name = "wake_up"
length = 3.0
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 1, 1.4, 1.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CPUParticles2D:emitting")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(1, 1.4, 1.8),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, true, true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CPUParticles2D:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.95, 1.35, 1.75),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [Vector2(0, -2), Vector2(0, -30), Vector2(0, -60)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("CPUParticles2D2:emitting")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(2.3),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("CPUParticles2D3:emitting")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(2.3),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Lhand:frame")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 2.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Rhand:frame")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0, 2.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("Rhand:position")
tracks/7/interp = 2
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(2.6, 3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(85, -25), Vector2(85, 25)]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("Rhand:rotation")
tracks/8/interp = 2
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(2.6, 3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [1.309, 0.261799]
}
tracks/9/type = "value"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("Lhand:position")
tracks/9/interp = 2
tracks/9/loop_wrap = true
tracks/9/keys = {
"times": PackedFloat32Array(2.6, 3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-85, -25), Vector2(-85, 25)]
}
tracks/10/type = "value"
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/path = NodePath("Lhand:rotation")
tracks/10/interp = 2
tracks/10/loop_wrap = true
tracks/10/keys = {
"times": PackedFloat32Array(2.6, 3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [-1.309, -0.261799]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_qgh1w"]
_data = {
&"RESET": SubResource("Animation_64ws7"),
&"idle": SubResource("Animation_daoeq"),
&"open_hands": SubResource("Animation_obglq"),
&"wake_up": SubResource("Animation_xc0bi")
}

[node name="WaterCrab" type="Area2D"]
collision_layer = 2
collision_mask = 12
script = ExtResource("1_obglq")

[node name="Hurtbox" type="CollisionShape2D" parent="."]
position = Vector2(0, -28)
shape = SubResource("RectangleShape2D_66m6x")

[node name="Rhand" type="Sprite2D" parent="."]
position = Vector2(85, -25)
rotation = 1.309
scale = Vector2(4, 4)
texture = ExtResource("1_f21y0")
hframes = 6

[node name="Lhand" type="Sprite2D" parent="."]
position = Vector2(-85, -25)
rotation = -1.309
scale = Vector2(4, 4)
texture = ExtResource("1_f21y0")
flip_h = true
hframes = 6

[node name="Sprite2D" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_5tpt0")
scale = Vector2(4, 4)
texture = ExtResource("2_obglq")
hframes = 8

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
position = Vector2(0, -2)
scale = Vector2(4, 4)
emitting = false
amount = 100
lifetime = 0.25
one_shot = true
explosiveness = 0.7
emission_shape = 3
emission_rect_extents = Vector2(30, 5)
gravity = Vector2(0, 0)
initial_velocity_min = 10.0
initial_velocity_max = 20.0
angle_max = 180.0
scale_amount_min = 7.5
scale_amount_max = 10.0
scale_amount_curve = SubResource("Curve_5tpt0")
color = Color(0, 0.364706, 0.760784, 1)

[node name="CPUParticles2D2" type="CPUParticles2D" parent="."]
position = Vector2(100, -33)
scale = Vector2(4, 4)
emitting = false
amount = 100
lifetime = 0.25
one_shot = true
explosiveness = 0.7
emission_shape = 3
emission_rect_extents = Vector2(8, 8)
gravity = Vector2(0, 0)
initial_velocity_min = 10.0
initial_velocity_max = 20.0
angle_max = 180.0
scale_amount_min = 7.5
scale_amount_max = 10.0
scale_amount_curve = SubResource("Curve_5tpt0")
color = Color(0, 0.364706, 0.760784, 1)

[node name="CPUParticles2D3" type="CPUParticles2D" parent="."]
position = Vector2(-100, -33)
scale = Vector2(4, 4)
emitting = false
amount = 100
lifetime = 0.25
one_shot = true
explosiveness = 0.7
emission_shape = 3
emission_rect_extents = Vector2(8, 8)
gravity = Vector2(0, 0)
initial_velocity_min = 10.0
initial_velocity_max = 20.0
angle_max = 180.0
scale_amount_min = 7.5
scale_amount_max = 10.0
scale_amount_curve = SubResource("Curve_5tpt0")
color = Color(0, 0.364706, 0.760784, 1)

[node name="Animations" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_qgh1w")
}

[node name="ShootTimer" type="Timer" parent="."]
wait_time = 1.6
one_shot = true

[node name="AfterImageTimer" type="Timer" parent="."]
wait_time = 0.03

[node name="HPTransform2D" type="RemoteTransform2D" parent="."]
update_rotation = false

[node name="StatusTransform2D" type="RemoteTransform2D" parent="."]
update_rotation = false

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="timeout" from="ShootTimer" to="." method="_on_shoot_timer_timeout"]
[connection signal="timeout" from="AfterImageTimer" to="." method="_on_after_image_timer_timeout"]
